--- a/sass/blocks/_books.sass
+++ b/sass/blocks/_books.sass
@@ -2,7 +2,6 @@
 	padding: 50px 0 76px
 	&__wrapper
 		display: flex
-		flex-wrap: wrap
 		margin-bottom: 27px
 	&__title
 		font-family: Roboto Condensed
